@@ -6,7 +6,7 @@ dnl Process this file with GNU autoconf to produce a configure script.
 dnl
 
 AC_INIT(src/maincpu.c)
-AM_INIT_AUTOMAKE(vice, 1.8.15)
+AM_INIT_AUTOMAKE(vice, 1.8.16)
 AM_CONFIG_HEADER(src/config.h)
 
 AC_DEFINE(UNSTABLE)
@@ -197,7 +197,7 @@ dnl a simple check to find `libintl.h' and `gettext'.
 dnl
 
 dnl Add new languages here
-ALL_LINGUAS="de fr it sv"
+ALL_LINGUAS="de fr it sv pl"
 
 dnl These rules are solely for the distribution goal.  While doing this
 dnl we only have to keep exactly one list of the available catalogs
